edit the title website

--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
             <div class="header-text">
                 <h1>this site for teaching programming and designing</h1>
                 <span class="square"></span>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Fugiat sed obcaecati quis possimus,
-                perspiciatis porro magni voluptas nesciunt
-                perferendis rem corrupti dolore velit tempore.
-                Aliquam impedit itaque laboriosam ut quam.</p>
+                <p>website fiofjfivjffio fjfivjffiofjfiv jffiofjfivjffi ofjfivjff iofjfivjf</p>
                 <button class="btn">Read More</button>
                 <div class="line">
                     <span class="line-1"></span><br>
