تعديل العنوان إلى Mohammed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="header-text">
                 <h1>this site for teaching programming and designing</h1>
                 <span class="square"></span>
-                <p>website fiofjfivjffio fjfivjffiofjfiv jffiofjfivjffi ofjfivjff iofjfivjf</p>
+                <p>website Mohammed</p>
                 <button class="btn">Read More</button>
                 <div class="line">
                     <span class="line-1"></span><br>
