--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Rako website</title>
+    <title>abdullah website</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,7 +14,9 @@
             <div class="header-text">
                 <h1>this site for teaching programming and designing</h1>
                 <span class="square"></span>
-                <p>website for learning some program lanaguage in one website such as flutter dart php, js  </p>
+                <p>website for learning some program lanaguage in one website such as flutter dart php, js 
+                    website for learning some program lanaguage in one website such as flutter dart php, js
+                website for learning some program lanaguage in one website such as flutter dart php, js </p>
                 <button class="btn">Read More</button>
                 <div class="line">
                     <span class="line-1"></span><br>
