--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <h2>"We are best team to explain courses"
                 , Progrmming and Designe 
                 </h2>
-                <h3>Rakwan ali</h3>
+                <h3>abdullah alshamsi</h3>
             </div>
         </div>
     </section>
@@ -153,7 +153,7 @@
                 <h2>"We are best team to explain courses"
                 , Progrmming and Designe 
                 </h2>
-                <h3>Rakwan ali</h3>
+                <h3>abdullah alshamsi</h3>
             </div>
         </div>
     </section>
@@ -212,9 +212,10 @@
             <div class="footer-right">
                 <div class="footer-info">
                     <div class="copy-write">
-                        <small>support@Rako.com</small><br>
-                        <small>Copywrite 2021 Rako</small><br>
-                        <small>+90012138</small>
+                        <small>ab2023118@gmail.com</small><br>
+                        <small>Copywrite 2021 alshamsi</small><br>
+                        <small>734297611</small>
+                        <small>eo.0c</small>
                     </div>
                     <div class="footer-logo">
                         <img src="images/logo.png" >
