آخر تعديلات على الصفحة

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <span class="square"></span>
                 <p>website for learning some program lanaguage in one website such as flutter dart php, js 
                     website for learning some program lanaguage in one website such as flutter dart php, js
-                website for learning some program lanaguage in one website such as flutter dart php, js </p>
+                website for learning some program lanaguage  </p>
                 <button class="btn">Read More</button>
                 <div class="line">
                     <span class="line-1"></span><br>
