آخر تعديلات على الصفحة

--- a/index.html
+++ b/index.html
@@ -49,11 +49,9 @@
             <div class="about-text">
                 <h1>About us</h1>
                 <span class="square"></span>
-                <p>Lorem ipsum dolor sit amet, consectetur
-                adipisicing elit. Vitae eligendi, provident
-                maxime deserunt eius quos ipsam reiciendis 
-                facilis, minima soluta, molestiae perspiciatis
-                sapiente ab sint magni aspernatur veniam ad dolor.
+                <p>website for learning some program lanaguage in one website such as flutter dart
+                    website for learning some program lanaguage in one website such as flutter dart php, js
+                     php, jswebsite for learning some program lanaguage in one website such as flutter dart php, js
                 </p><br>
                 <div class="line">
                     <span class="line-1"></span><br>
